--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react-dom": "^19.1.1",
     "lucide-react": "^0.539.0",
     "chart.js": "^4.4.3",
-    "react-chartjs-2": "^5.2.0"
+    "react-chartjs-2": "^5.2.0",
+    "@google/genai": "^1.14.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
